Mon Feb  2 22:05:36 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkseparatormenuitem.c (gtk_separator_menu_item_init): The
	latest in menu separation technology.

Mon Feb  2 19:04:17 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gdk/x11/gdkwindow-x11.c: Assume gravity works. (Anything else
	we have to take our chances with).
	
	(Bug 97510)

Mon Feb  2 18:45:28 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	Fix bug 110224.

	* gdk/x11/gdkfont-x11.c (gdk_font_from_description_for_display):
	Remove unused variable 'result'

	* gdk/x11/xsettings-client.[ch]: Add new set_grab/ungrab_func() functions.

	* gdk/x11/gdkevents-x11.c (_gdk_x11_events_init_screen): Use them
	here.

Mon Feb  2 14:32:32 2004  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in po/uz*.po: changed default for Uzbek; now just "uz"
	is in cyrillic and "uz@Latn" for latin; "uz@Cyrl" has been removed

Sun Feb  1 16:34:07 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtktoolbar.c (gtk_toolbar_size_allocate): Only start
	sliding when using the new API.

Sun Feb  1 16:03:39 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtktoolbar.c (gtk_toolbar_size_allocate): Make sure
	item_area is positioned correctly. Fix #133070, reported by Jeroen
	Zwartepoorte.

Sat Jan 31 23:13:43 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktextchild.c (gtk_text_child_anchor_finalize): Don't
	crash when finalizing an unused GtkTextChildAnchor.  (#132260,
	muppet)

Sat Jan 31 22:41:57 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktreemodel.c (gtk_tree_model_rows_reordered): Correct
	the documentation for new_order.  (#124790, Tim-Philipp Müller)

Sat Jan 31 22:38:07 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_set_fixed_width): 
	Reset use_resized_width when setting fixed_width.  (#108612, 
	Felipe Heidrich) 

Sat Jan 31 16:27:44 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkmain.c (gtk_key_snooper_remove): Don't leak the